[package]
name = "poem-ratelimit"
authors = ["LI Rui <me@lirui.tech>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = """
poem-ratelimit is a ratelimit middleware for poem web framework.
"""
repository = "https://github.com/devsday/poem-ratelimit"
license = "Apache-2.0"
keywords = ["ratelimit"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"

redis = "0.17"

poem = "1.3"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"