[package]
name = "poem-ratelimit"
authors = ["LI Rui <me@lirui.tech>"]
version = "0.2.2"
edition = "2021"
readme = "README.md"
description = """
poem-ratelimit is a ratelimit middleware for poem web framework.
"""
homepage = "https://github.com/KernelErr/poem-ratelimit"
repository = "https://github.com/KernelErr/poem-ratelimit"
license = "Apache-2.0"
keywords = ["ratelimit"]
categories = ["web-programming"]

[dependencies]
redis = { version = "0.21", features = ["tokio-comp"] }
poem = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.30"

[dev-dependencies]
serde_yaml = "0.8"
